--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -411,6 +411,7 @@ scroll-view {
   line-height: 26rpx;
   text-align: left;
   margin-bottom: 34rpx;
+    margin-top: 24rpx;
 }
 
 .ProjectCluesLine {
