--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -111,7 +111,7 @@
 
 <!--My个人描述-->
 <template name="userIntro">
-<view class="user_intro" bindtap="cardEdit">
+<view class="user_intro" bindtap="cardEdit" wx:if="{{user.user_intro!=null}}">
   <view class="intro_title flex">
     <view class="title flex">
       <image class="title_icon" src="/img/icon-miaoshu@3x.png"></image>
@@ -213,11 +213,13 @@
         </view>
       </view>
       <block wx:for="{{project_info}}" wx:key="{{item.pro_intro}}">
-        <view class="user_project_frame">
+        <view class="user_project_frame" catchtap="financingDetail" data-id="{{item.pro_id}}">
           <view class="flex">
             <view class="pro_intro">{{item.pro_intro||item.case_name}}</view>
-            <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
-            <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image>
+            <!-- <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+            <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image> -->
+            <view class='is_exclusive' wx:if='{{item.is_exclusive===1}}'>独家</view>
+            <view class='is_exclusive' wx:if='{{item.is_exclusive===2}}'>非独</view>
           </view>
           <block wx:for="{{item.pro_industry||item.case_industry}}" wx:key="{{item.industry_id}}" wx:for-item="pro_industry">
             <label class="noLight" wx:if="{{index < item.pro_industry.length-1}}" data-id="{{pro_industry.industry_id}}" data-vlaue="{{pro_industry.industry_name}}">{{pro_industry.industry_name}}、</label>
@@ -236,7 +238,7 @@
 
 <!--My投资案例-->
 <template name="investProject">
-    <view class="user_project_info investment-casem">
+    <view class="user_project_info investment-casem" wx:if="{{canEdit}}">
       <view class="intro_title">
         <view class="flex title" catchtap="investCase">
           <view class="flex">
@@ -584,9 +586,14 @@
         <view class="projectInfo flex" wx:if="{{type == 0}}">
           <view class="seeNum">{{item.view_count}}人看过项目</view>
           <view class="interest flex">
-            <view class="btnNoInterest" catchtap="noInteresting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}" data-project="{{item.project_id}}">没兴趣</view>
+            <!-- <view class="btnNoInterest" catchtap="noInteresting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}" data-project="{{item.project_id}}">没兴趣</view>
             <view class="btnHaveInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}" data-project="{{item.project_id}}">联系项目方</view>
-            <view class="haveInterest" wx:if="{{item.handle_status == 1}}">感兴趣</view>
+            <view class="haveInterest" wx:if="{{item.handle_status == 1}}">感兴趣</view> -->
+           <view class="addProjectTo not-interestedm" catchtap="addProjectLibrary" data-push="{{item.push_id}}" data-project="{{item.project_id}}" wx:if="{{item.import_status  == 0}}">加入项目库</view>
+            <view class="haveInterest" wx:if="{{item.import_status  == 1}}">已加入</view>
+            <view class="btnNoInterest not-interestedm" catchtap="noInteresting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}" data-project="{{item.project_id}}">没兴趣</view>
+            <view class="btnHaveInterest interestedm" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}" data-project="{{item.project_id}}">联系项目方</view>
+            <view class="haveInterest " wx:if="{{item.handle_status == 1}}">感兴趣</view>
           </view>
         </view>
         <!--我申请查看的项目  -->
@@ -1033,5 +1040,13 @@
       <view>加人脉</view>
     </view>
 
+  </view>
+</template>
+
+<!--加载更多  -->
+<template name="loadMore">
+  <view class="t-loadmore" wx:if="{{loading=='1'}}">
+    <view class="t-loading"></view>
+    <view class="t-loadmore__tips">正在加载</view>
   </view>
 </template>
