--- a/Weitianshi/pages/message/potentialProject/potentialProject.wxss
+++ b/Weitianshi/pages/message/potentialProject/potentialProject.wxss
@@ -192,27 +192,34 @@
 }
 
 .haveInterest {
-  position: absolute;
+  /* position: absolute; */
   color: #999;
-  right: 32rpx;
+  /* right: 32rpx; */
   white-space: nowrap;
   display: block;
-  /* top: -16rpx; */
+  padding: 0 32rpx;
+  margin: 20rpx 16rpx 0 16rpx;
+  height: 52rpx;
+  line-height: 52rpx;
 }
 
-.btnHaveInterest, .btnNoInterest {
+.btnHaveInterest, .btnNoInterest,.addProjectTo {
   font-size: 24rpx;
   color: #40587a;
-  border: 1px solid #40587A;
+  border: 1px solid #40587a;
   height: 52rpx;
   line-height: 52rpx;
   padding: 0 32rpx;
-  margin: 20rpx 24rpx 0 185rpx;
+  margin: 20rpx 16rpx 0 16rpx;
   border-radius: 4rpx;
 }
 
+
 .btnHaveInterest {
   margin: 20rpx 0 0 0;
+  padding: 0 8rpx;
+  color:#fff;
+  background:#40587a;
 }
 
 #time {
@@ -222,7 +229,12 @@
   text-align: right;
   margin: 10rpx 0 20rpx 0;
 }
-
+.addProjectTo{
+    margin: 20rpx 0 0 0;
+  padding: 0 8rpx;
+  color:#40587a;
+  background:#fff;
+}
 /*==========我申请查看的项目===============  */
 
 .apply {
