--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -156,8 +156,9 @@ page{
   width: 100%;
   height: 88rpx;
   line-height: 88rpx;
-  color: #40587a;
+  color: #fff;
   font-size: 30rpx;
+  background:#40587a;
 }
 
 .shop {
