--- a/Weitianshi/pages/myProject/editProject/editProject.wxss
+++ b/Weitianshi/pages/myProject/editProject/editProject.wxss
@@ -42,7 +42,7 @@ page {
   border: 1px solid #e0e0e0;
   padding: 0 32rpx;
   justify-content: space-between;
-  align-items: baseline
+  align-items: baseline;
 }
 
 .slect view {
@@ -50,7 +50,8 @@ page {
   width: 90%;
   color: #ccc;
 }
-.slect .checkOn{
+
+.slect .checkOn {
   color: #333;
 }
 
@@ -68,38 +69,43 @@ page {
   line-height: 82rpx;
   text-align: center;
 }
-.card .tips_on{
-    border:1px solid #333;
-    color: 333;
+
+.card .tips_on {
+  border: 1px solid #333;
+  color: 333;
 }
 
-.card_tips .flex{
+.card_tips .flex {
   justify-content: space-between;
 }
 
-.bp{
-    display: flex;
-    justify-content: space-between;
-    padding: 48rpx 0;
-}
-.bp view:first-child{
-    font-size: 24rpx;
-    color: #333;
-}
-.bpBtn{
-    background: #40587a;
-    border-radius: 200rpx;
-    font-size: 20rpx;
-    color: white;
-    padding: 15rpx;
+.bp {
+  display: flex;
+  justify-content: space-between;
+  padding: 48rpx 0;
 }
 
-.slect .slectInput{
+.bp view:first-child {
+  font-size: 24rpx;
+  color: #333;
+}
+
+.bpBtn {
+  background: #40587a;
+  border-radius: 200rpx;
+  font-size: 20rpx;
+  color: white;
+  padding: 15rpx;
+}
+
+.slect .slectInput {
   height: 82rpx;
   line-height: 82rpx;
-  width:98%;
+  width: 98%;
 }
+
 /*去电脑端上传*/
+
 .pointToPC {
   background: #fff1e8;
   width: 87%;
@@ -111,15 +117,18 @@ page {
   line-height: 80rpx;
   padding: 0 48rpx;
 }
-.pointPcToNet{
-  position:absolute;
-  right:48rpx;
+
+.pointPcToNet {
+  position: absolute;
+  right: 48rpx;
 }
-.pointPcIcon{
-  width:24rpx;
-  height:18rpx;
-  margin-right:8rpx;
+
+.pointPcIcon {
+  width: 24rpx;
+  height: 18rpx;
+  margin-right: 8rpx;
 }
+
 /*新样式  */
 
 .topBox {
@@ -152,13 +161,14 @@ page {
   text-align: right;
   margin-right: 12rpx;
 }
-.projectContentInput{
+
+.projectContentInput {
   font-size: 28rpx;
   color: #ccc;
   /* line-height: 28rpx; */
   text-align: right;
   margin-right: 12rpx;
-  margin-top:32rpx;
+  margin-top: 32rpx;
 }
 
 .arrowStyle {
@@ -168,11 +178,10 @@ page {
 }
 
 .tipsNew {
-  /* height: 82rpx; */
-  padding: 30rpx 0;
-  padding-top:0;
-    justify-content: center;
-    align-items: center;
+  padding: 30rpx 32rpx;
+  padding-top: 0;
+  justify-content: right;
+  align-items: right;
 }
 
 .tipsPic {
@@ -222,13 +231,17 @@ page {
   color: #666;
   line-height: 36rpx;
 }
-.highBox{
-  height:146rpx;
+
+.highBox {
+  height: 146rpx;
 }
-.noBorder{
-  border:none;
+
+.noBorder {
+  border: none;
 }
+
 /*模态框  */
+
 .modalBox {
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
@@ -236,8 +249,9 @@ page {
   position: absolute;
   left: 0;
   top: 0;
-   z-index:9999999;
+  z-index: 9999999;
 }
+
 .contactModalBox {
   height: 652rpx;
   width: 506rpx;
@@ -246,59 +260,66 @@ page {
   margin-left: 64rpx;
   padding: 40rpx 32rpx 32rpx 32rpx;
   position: fixed;
-  z-index:99999999;
+  z-index: 99999999;
 }
-.modalTitle{
-font-size:32rpx;
-color:#333333;
-line-height:32rpx;
-text-align:center;
-margin-bottom:16rpx;
+
+.modalTitle {
+  font-size: 32rpx;
+  color: #333;
+  line-height: 32rpx;
+  text-align: center;
+  margin-bottom: 16rpx;
 }
-.modalContent{
-border:1rpx solid #e6e6e6;
-/* width:504rpx; */
-height:258rpx;
-margin-bottom:48rpx;
-margin-right: 0;
-outline: none;
-padding-top:20rpx;
-padding-left:24rpx;
-font-size:28rpx;
-color:#999999;
-line-height:28rpx;
+
+.modalContent {
+  border: 1rpx solid #e6e6e6;
+  /* width:504rpx; */
+  height: 258rpx;
+  margin-bottom: 48rpx;
+  margin-right: 0;
+  outline: none;
+  padding-top: 20rpx;
+  padding-left: 24rpx;
+  font-size: 28rpx;
+  color: #999;
+  line-height: 28rpx;
 }
-.modalTips{
-font-size:28rpx;
-color:#666666;
-line-height:40rpx;
-text-align:center;
-padding:0 28rpx;
+
+.modalTips {
+  font-size: 28rpx;
+  color: #666;
+  line-height: 40rpx;
+  text-align: center;
+  padding: 0 28rpx;
 }
-.btn{
-background:#40587a;
-border-radius:6rpx;
-width:506rpx;
-height:88rpx;
-font-size:32rpx;
-color:#ffffff;
-line-height:88rpx;
-text-align:center;
-margin-top: 72rpx;
+
+.btn {
+  background: #40587a;
+  border-radius: 6rpx;
+  width: 506rpx;
+  height: 88rpx;
+  font-size: 32rpx;
+  color: #fff;
+  line-height: 88rpx;
+  text-align: center;
+  margin-top: 72rpx;
 }
-.close{
-  width:48rpx;
-  height:48rpx;
+
+.close {
+  width: 48rpx;
+  height: 48rpx;
   position: fixed;
-  top:185rpx;
-  right:94rpx;
-    z-index:999999999;
+  top: 185rpx;
+  right: 94rpx;
+  z-index: 999999999;
 }
-.aPic{
-  height:250rpx;
-  width:276rpx;
+
+.aPic {
+  height: 250rpx;
+  width: 276rpx;
   margin: 96rpx 0 62rpx 118rpx;
 }
-.newBox{
-  color:#333
+
+.newBox {
+  color: #333;
 }
